SONAR-7923 Create WS api/qualitygates/get_by_project